--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .header {
   background-color: rgb(50, 167, 145);
   display: flex;
-  height: 60px;
+  height: 90px;
   justify-content: space-between;
   align-items: center;
   padding: 0 2%;
@@ -61,7 +61,7 @@ main {
 }
 
 .image-main {
-  align-self: flex-end;
+  align-self: center;
 }
 
 .image-main img {
@@ -88,4 +88,16 @@ main {
     justify-content: space-around;
   }
 
+  #evaluation-form {
+    margin-left: 2%;
+    margin-top: 2%;
+  }
+}
+
+@media only screen and (max-width: 675px) {
+  #evaluation-form {
+    width: 400px;
+    align-self: center;
+    margin-top: 2%;
+  }
 }
