--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header button {
 
 .login-container {
   height: 70%;
+  display: flex;
 }
 
 .flex-container {
@@ -58,6 +59,7 @@ main {
 #evaluation-form {
   display: flex;
   width: 675px;
+  color: rgb(50, 167, 145);
 }
 
 .image-main {
@@ -66,6 +68,13 @@ main {
 
 .image-main img {
   height: 500px;
+}
+
+.field-border {
+  border: 1px solid rgb(50, 167, 145);
+  height: 500px;
+  padding: 4%;
+  border-radius: 3%;
 }
 
 @media only screen and (min-width: 675px) {
@@ -81,6 +90,10 @@ main {
 
   .login-container .flex-container {
     min-width: 200px;
+  }
+
+  form.flex-row {
+    align-self: center;
   }
 
   main.flex-container {
