--- a/style.css
+++ b/style.css
@@ -18,10 +18,16 @@
 
 header button {
   width: 80px;
+  font-family: 'Oldenburg', cursive;
 }
 
 .trybewarts-header-logo {
   height: 100%;
+}
+
+h1 {
+  font-size: 2rem;
+  font-family: 'Oldenburg', cursive;
 }
 
 .login-container {
@@ -31,21 +37,17 @@ header button {
 
 .flex-container {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
 }
 
 .login-container .flex-container {
-  width: 60%;
+  width: 100%;
 }
 
 .flex-row {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-}
-
-header h1 {
-  font-size: 1.5rem;
 }
 
 main {
@@ -71,14 +73,17 @@ main {
   height: 500px;
   padding: 4%;
   border-radius: 3%;
+  min-width: 100%;
 }
 
 @media only screen and ( min-width : 675px ) {
 
+  header h1 {
+    font-size: 3rem;
+  }
+
   .login-container .flex-container {
     flex-flow: row nowrap;
-    width: 98%;
-    min-width: 200px;
   }
 
   .login-container input {
@@ -107,5 +112,9 @@ main {
     width: 400px;
     align-self: center;
     margin-top: 2%;
+  }
+
+  .flex-container {
+    flex-flow: column nowrap;
   }
 }
