--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 header button {
   width: 80px;
-  font-family: 'Oldenburg', cursive;
+  font-family: Oldenburg, cursive;
 }
 
 .trybewarts-header-logo {
@@ -27,7 +27,7 @@ header button {
 
 h1 {
   font-size: 2rem;
-  font-family: 'Oldenburg', cursive;
+  font-family: Oldenburg, cursive;
 }
 
 .login-container {
