--- a/style.css
+++ b/style.css
@@ -61,6 +61,12 @@ main {
   flex-flow: column nowrap;
 }
 
+#evaluation-form label {
+  font-family: Oldenburg, cursive;
+  margin-left: 1%;
+  margin-top: 2%;
+}
+
 .image-main {
   align-self: center;
 }
@@ -75,6 +81,7 @@ main {
   padding: 4%;
   border-radius: 3%;
   min-width: 100%;
+  margin-bottom: 5%;
 }
 
 @media only screen and ( min-width : 675px ) {
