--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 2%;
+  width: 100%;
 }
 
 .image-container {
@@ -141,5 +142,24 @@ main {
 
   .image-main img {
     height: 300px;
+  }
+}
+
+@media only screen and ( max-width : 420px ) {
+  
+  header img {
+    width: 40px;
+  }
+
+  header h1 {
+    font-size: 1.3rem;
+  }
+
+  #evaluation-form {
+    width: 350px;
+  }
+
+  .image-main img {
+    width: 350px;
   }
 }
