--- a/style.css
+++ b/style.css
@@ -93,6 +93,9 @@ main {
 #family-section {
   display: flex;
   flex-flow: column nowrap;
+  align-items: center;
+  font-size: 1.2rem;
+  width: 100%;
 }
 
 @media only screen and ( min-width : 675px ) {
