--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ main {
   #evaluation-form {
     margin-left: 2%;
     margin-top: 2%;
+    max-width: 50%;
   }
 }
 
@@ -147,10 +148,6 @@ main {
 }
 
 @media only screen and ( max-width : 980px ) and ( min-width : 675px ) {
-
-  #evaluation-form {
-    height: 300px;
-  }
 
   .image-main img {
     height: 300px;
