--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@
   height: 90px;
   justify-content: space-between;
   align-items: center;
-  padding: 0 2%;
+  padding: 0 0;
   width: 100%;
-  border: none;
 }
 
 .image-container {
