--- a/style.css
+++ b/style.css
@@ -104,6 +104,16 @@ main {
   justify-content: center;
 }
 
+#rating-trybewarts {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+#comments-section {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
 @media only screen and ( min-width : 675px ) {
 
   header h1 {
