--- a/style.css
+++ b/style.css
@@ -114,6 +114,12 @@ main {
   flex-flow: column nowrap;
 }
 
+footer {
+  text-align: center;
+  font-size: 0.8rem;
+  font-weight: 800;
+}
+
 @media only screen and ( min-width : 675px ) {
 
   header h1 {
